--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@storybook/manager-webpack5": "6.4.19",
     "@storybook/react": "6.4.19",
     "@storybook/testing-library": "0.0.9",
-    "@svgr/webpack": "6.2.1",
+    "@svgr/webpack": "^6.2.1",
     "@testing-library/jest-dom": "5.16.2",
     "@testing-library/react": "12.1.3",
     "@types/jest": "27.4.1",
@@ -51,7 +51,7 @@
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.29.2",
     "eslint-plugin-react-hooks": "4.3.0",
-    "file-loader": "6.2.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "5.5.0",
     "husky": "7.0.0",
     "identity-obj-proxy": "3.0.0",
@@ -67,6 +67,7 @@
     "style-loader": "3.3.1",
     "stylelint": "14.5.3",
     "stylelint-config-standard-scss": "3.0.0",
+    "svg-inline-loader": "^0.8.2",
     "ts-loader": "9.2.6",
     "ts-node": "10.9.2",
     "typescript": "4.5.5",
