--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "7.17.5",
-    "@babel/preset-env": "7.16.11",
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
     "@babel/preset-react": "7.16.7",
     "@babel/preset-typescript": "7.16.7",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
@@ -40,7 +40,7 @@
     "@types/webpack-dev-server": "4.7.2",
     "@typescript-eslint/eslint-plugin": "5.12.1",
     "@typescript-eslint/parser": "5.12.1",
-    "babel-loader": "8.2.3",
+    "babel-loader": "^8.3.0",
     "babel-plugin-i18next-extract": "0.8.3",
     "copy-webpack-plugin": "10.2.4",
     "css-loader": "6.6.0",
@@ -72,7 +72,7 @@
     "ts-loader": "9.2.6",
     "ts-node": "10.9.2",
     "typescript": "4.5.5",
-    "webpack": "5.69.1",
+    "webpack": "^5.92.0",
     "webpack-bundle-analyzer": "4.5.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "4.7.4"
