--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "build:prod": "webpack --env mode=production",
     "build:dev": "webpack --env mode=development",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint **/*.{js,ts,tsx}",
-    "lint:fix": "eslint **/*.{js,ts,tsx} --fix"
+    "lint:ts": "eslint **/*.{js,ts,tsx}",
+    "lint:ts:fix": "eslint **/*.{js,ts,tsx} --fix",
+    "lint:scss": "npx stylelint \"**/*.scss\"",
+    "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix"
   },
   "keywords": [],
   "author": "",
@@ -21,7 +23,8 @@
     "@babel/preset-react": "7.16.7",
     "@babel/preset-typescript": "7.16.7",
     "@eslint/compat": "^1.1.0",
-    "@eslint/js": "^9.4.0",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "9.5.0",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.5",
     "@storybook/addon-actions": "6.4.19",
     "@storybook/addon-essentials": "6.4.19",
@@ -48,12 +51,12 @@
     "babel-plugin-i18next-extract": "0.8.3",
     "copy-webpack-plugin": "10.2.4",
     "css-loader": "6.6.0",
-    "eslint": "^9.4.0",
+    "eslint": "^8.10.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-i18next": "^5.1.2",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.34.2",
+    "eslint-plugin-react": "^7.29.2",
     "eslint-plugin-react-hooks": "^4.3.0",
     "file-loader": "6.2.0",
     "globals": "^15.4.0",
@@ -71,8 +74,8 @@
     "sass": "1.49.9",
     "sass-loader": "12.6.0",
     "style-loader": "3.3.1",
-    "stylelint": "14.5.3",
-    "stylelint-config-standard-scss": "3.0.0",
+    "stylelint": "^14.5.3",
+    "stylelint-config-standard-scss": "^3.0.0",
     "svg-inline-loader": "0.8.2",
     "ts-loader": "9.2.6",
     "ts-node": "10.9.2",
